--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body{
 	text-align: center;
 	font-family: arial;
-	font-size: 22px;
+	font-size: 30px;
+	background-image: url("paper.jpg");
+	border-style: double;
 }
 
 li{
@@ -11,12 +13,26 @@ li{
 }
 
 .header{
-	background-color: lightblue;
+	background-color: yellow;
 	border-bottom:#ccc 3px solid;
-	padding: 20px;
+	padding: 10px;
 }
 
 .container{
-	width: 700px;
-	margin: 30px auto;
+	width: 1000px;
+	margin: 100px auto;
+}
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: green;
 }
