--- a/WebApp/templates/test.html
+++ b/WebApp/templates/test.html
@@ -11,7 +11,7 @@
 	<h1 id="heading" >Smart Price</h1>
 	<p>Price your Ebay items appropriately!</p>
 </div>
-<img src="http://hdwpro.com/wp-content/uploads/2017/01/3D-Cool-Image.jpg">
+<img src={{Graph}}>
 <div class = "container">
 	<form method="post" action="something.php" name="myForm">
 	<div>
