--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -12,7 +12,7 @@
 </div>
 <div class = row>
 <div class = "graph">
-	<img src = {{image}} height = 320, width = 320>
+	<img src = "data:image/png;base64,{{image}}" height = 320, width = 320>
 </div>
 <table class="table-fill">
 <tbody class="table-hover">
