arhubs smells like shit

--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Table Style</title>
-	<link rel = "stylesheet" href="style2.css" />
+	<link rel = "stylesheet" href="static/css/style2.css" />
 	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
 </head>
 
@@ -42,6 +42,6 @@
 
 
 <p class = "statement" >Your suggested listing price:</p>
-<p class = "price">{{min}}-{{max}} </p>
+<p class = "price">{{min}} - {{max}} </p>
 
 </body>
