--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Table Style</title>
+	<title>Results</title>
 	<link rel = "stylesheet" href="static/css/style2.css" />
 	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
 </head>
@@ -12,7 +12,7 @@
 </div>
 <div class = row>
 <div class = "graph">
-	<img src = "data:image/png;base64,{{image}}" height = 450, width = 450>
+	<img src = "data:image/png;base64,{{image}}" height = 320px, width = 400px>
 </div>
 <table class="table-fill">
 <tbody class="table-hover">
