--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -12,7 +12,7 @@
 </div>
 <div class = row>
 <div class = "graph">
-	<img src = "data:image/png;base64,{{image}}" height = 320px, width = 400px>
+	<img src = "data:image/png;base64,{{image}}" height = 320px, width = 320px>
 </div>
 <table class="table-fill">
 <tbody class="table-hover">
@@ -41,7 +41,7 @@
 </div>
 
 
-<p class = "statement" >Your suggested listing price:</p>
-<p class = "price">{{min}} - {{max}} </p>
+<h4 class = "statement" >Your suggested listing price:</h4>
+<h2 class = "price">{{min}} - {{max}} </h2>
 
 </body>
