--- a/WebApp/templates/page2.html
+++ b/WebApp/templates/page2.html
@@ -10,9 +10,9 @@
 <div class="table-title">
 	<h3>SMART PRICE!</h3>
 </div>
-<div class = row>
+
 <div class = "graph">
-	<img src = "data:image/png;base64,{{image}}" height = 320px, width = 320px>
+	<img src = "data:image/png;base64,{{image}}" height = 500px, width = 500px>
 </div>
 <table class="table-fill">
 <tbody class="table-hover">
@@ -40,8 +40,12 @@
 </table>
 </div>
 
-
-<h4 class = "statement" >Your suggested listing price:</h4>
-<h2 class = "price">{{min}} - {{max}} </h2>
+<div class="statement">
+	<h2>Your suggested listing price:</h2>
+</div>
+ <p></p>
+<div class="price">
+	<h2>{{min}} - {{max}} </h2>
+</div>
 
 </body>
