--- a/WebApp/static/css/style2.css
+++ b/WebApp/static/css/style2.css
@@ -9,6 +9,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   text-rendering: optimizeLegibility;
+  text-align: center;
 }
 
 div.table-title {
@@ -21,7 +22,7 @@ div.table-title {
 
 .table-title h3 {
    color: white;
-   font-size: 40px;
+   font-size: 50px;
    font-weight: 400;
    font-style:normal;
    font-family: "Roboto", helvetica, arial, sans-serif;
@@ -31,15 +32,15 @@ div.table-title {
 }
 
 .graph {
-  border: 1px solid #021a40;
+  padding: 5px;
   position: absolute;
   bottom: auto;
   right: auto;
-  top: 120;
-  left: 110;
-  width: 320px;
-  height: 320px;
-
+  top: 115;
+  left: 105;
+  width: 350px;
+  height: 400px;
+  border: 0.1px solid #021a40;
 }
 
 .table-fill {
